--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.6",
     "sharp": "^0.30.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "@types/react-scroll": "^1.8.3",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "typescript": "4.5.5"
