--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.5.10",
     "@types/nprogress": "^0.2.0",
     "@types/styled-components": "^5.1.21",
+    "framer-motion": "^6.2.8",
     "graphql": "^16.3.0",
     "next": "^12.1.0",
     "nprogress": "^0.2.0",
